plan what i will upload which contents

--- a/mysite.html
+++ b/mysite.html
@@ -8,7 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-<h1>hello, world!</h1>
+<h1>ㅇㅏ 뭐하지</h1>
+<h1>일단 나도 리액트 쓸래 뷰는 뭐지? 뷰 써봐??</h1>
+<h1>장고 쓰고</h1>
+<h1>네브바 : 날짜, 시(초단위), 대표아이콘(누르면 홈페이지 소개)</h1>
+<h1>
+    컨텐츠 : 나를 보여주는 것들 - 상하이(중국어전공), SSAP(개발 시작 후 최초 결과물), 클밍 인스타(취미), 덕질(그룹별 최애곡 유튭 링크), 여행사진, 호두
+    방명록 : 댓글CRUD(작성,수정,삭제 시 비번 입력하도록/관리자는 삭제 자유롭게)
+    홈페이지 영/중 버전 제공하기
+    관리자 모드 만들기? 관리자용 아이디 만들기?
+</h1>
+<h1>푸터는 필요 없을 듯...?</h1>
+<h1>이스터에그 : 비밀 파일(내 생일 치면 볼 수 있게) :  </h1>
 </body>
 </html>
 
